# Market-Research-Agent-Project

./: .env.example  .gitignore  README.md  clean_cache.sh  consolidate_branches.sh  demo_advanced_features.py  pack.sh  pyproject.toml  requirements.txt  run_analytics_dashboard.py  run_udaplay.py
.github/: README.md  repository-settings.json
.github/workflows/: ci.yml
chromadb/: chroma.sqlite3
docs/: SUBMISSION_CHECKLIST.md  submission_notes.md
scripts/: collect_warnings.py
src/: __init__.py  main.py
src/agent/: __init__.py  state_machine.py  udaplay_agent.py
src/config/: settings.py
src/database/: __init__.py  vector_store.py
src/models/: __init__.py  game.py
src/tools/: __init__.py  advanced_memory.py  evaluate_retrieval.py  game_recommendation.py  game_web_search.py  retrieve_game.py  sentiment_analysis.py  structured_output.py  trend_analysis.py  trending_games.py
src/utils/: logger.py
tests/: conftest.py  test_agent_flow.py  test_state_persistence.py  test_vector_store.py  test_vector_store_add_document.py  test_vector_store_add_document_extra.py
tests/starter/: PROJECT_SUMMARY.md  Udaplay_01_starter_project.ipynb  Udaplay_02_starter_project.ipynb  demo.py  project_instructions.txt  run_tests.py  submission_notes.md  test_udaplay.py
viz/: advanced_analytics.py  enhanced_analytics.py  simple_analytics.py  streamlit_app.py
